# TorrentApi

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml
.github/workflows/: dockerhub-description.yml  main.yml  matrix.yml
api-server/: Cargo.toml
api-server/src/: add_torrent_options.rs  category_form_field.rs  config.rs  context.rs  filter.rs  graphql.rs  http_error.rs  int_scalar.rs  main.rs  order.rs  parse_category.rs  search_handler.rs  search_params.rs  sort_column.rs  torrent.rs
api-server/src/api/: mod.rs
api-server/src/api/mutation/: add_torrents.rs  delete_torrents.rs  mod.rs  track_movie.rs
api-server/src/api/query/: active_torrents.rs  mod.rs  movie_info.rs  popular_movies.rs  search_filters.rs  search_movies.rs  search_torrents.rs  tmdb_bulk.rs  trending_movies.rs
api-server/src/background/: mod.rs  movie_tracking.rs
api-server/src/models/: config.rs  context.rs  filter.rs  http_error.rs  mod.rs  movie_files.rs  provider_error.rs  search_torrents_parameters.rs  serde_regex.rs  torrent_movie_info.rs
api-server/src/static/: media_file_extensions.rs  mod.rs  subtitle_file_extensions.rs  subtitle_language_map.rs
api-server/src/utils/: get_imdb.rs  get_tmdb.rs  hash_from_magnet.rs  import_movie.rs  mod.rs  movie_info.rs  parse_subtitle_language.rs  track_movie.rs
movie-info/: Cargo.toml
movie-info/src/: error.rs  lib.rs
movie-info/src/api/: bulk.rs  from_imdb.rs  from_tmdb.rs  mod.rs  popular.rs  search.rs  trending.rs  trending_popular.rs
movie-info/src/models/: certification.rs  collection.rs  credits.rs  filters.rs  image.rs  mod.rs  movie_info.rs  ratings.rs  recommendation.rs  tmdb_id.rs
movie-info/src/utils/: mod.rs  parse_imdb_id.rs
qbittorrent-api/: Cargo.toml
qbittorrent-api/src/: auth_middleware.rs  error.rs  lib.rs  serialize_hashes.rs
qbittorrent-api/src/api/: add_category.rs  add_torrents.rs  categories.rs  delete_torrents.rs  edit_category.rs  ensure_category.rs  import_torrent.rs  mod.rs  set_category.rs  sync.rs  torrents.rs  version.rs  wait_torrent_completion.rs
qbittorrent-api/src/models/: add_category_options.rs  add_torrent_options.rs  category.rs  delete_torrents_parameters.rs  get_torrents_parameters.rs  mod.rs  partial_torrent.rs  set_category_options.rs  sync_main_data.rs  sync_result.rs  torrent.rs  torrent_state.rs
qbittorrent-api/src/utils/: mod.rs  path_converter.rs
torrent-search-client/: Cargo.toml
torrent-search-client/src/: category.rs  error.rs  get_json.rs  http.rs  lib.rs  logging_middleware.rs  movie_properties.rs  torrent.rs
torrent-search-client/src/client/: 1337x.rs  bitsearch.rs  mod.rs  piratebay.rs  yts.rs
torrent-search-client/src/movie_properties/: codec.rs  mod.rs  quality.rs  source.rs
torrent-search-client/src/search_options/: category.rs  invalid_option_error.rs  mod.rs  movie_options.rs  order.rs  sort_column.rs
torrent-search-client/src/static/: mod.rs
torrent-search-client/src/static/tests/: matrix_torrents.json  matrix_torrents.rs  mod.rs
torrent-search-client/src/static/trackers/: mod.rs  piratebay.rs  yts.rs
torrent-search-client/src/utils/: get_json.rs  get_text.rs  mod.rs  normalize_title.rs  parse_title.rs  round_robin.rs
utils/: Cargo.toml
utils/src/: datetime.rs  int_scalar.rs  lib.rs  magnet.rs  surf_logging.rs
