[workspace]
members = [
	"api-server",
	"torrent-search-client",
	"qbittorrent-api",
	"utils",
	"movie-info",
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0.219", features = ["std", "derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
tokio = "1.45.0"
regex = "1.11.1"
lazy_static = "1.5.0"
strum = "0.27.1"
strum_macros = "0.27.1"
async-graphql = { version = "7.0.16", features = ["chrono"] }
getset = "0.1.5"
log = "0.4.27"
surf = { version = "2.3.2", features = [
	"h1-client",
	"encoding",
], default-features = false }
http-cache-surf = "0.14.1"
