[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-search-client = { path = "../torrent-search-client", version = "0.1", features = [
	"graphql",
] }
qbittorrent-api = { path = "../qbittorrent-api", version = "0.1", features = [
	"graphql",
] }
movie-info = { path = "../movie-info", version = "0.1", features = ["graphql"] }
utils = { path = "../utils", version = "0.1" }
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
juniper = "0.15.12"
juniper_rocket = "0.8.2"
derive-getters = "0.3.0"
serde = "1.0.197"
chrono = "0.4.35"
rocket_http = "=0.5.0-rc.2"
serde_json = "1.0.114"
tokio = "1.36.0"
figment = { version = "0.10.15", features = ["yaml"], default-features = false }
filenamify = "0.1.0"
regex = "1.10.3"
lazy_static = "1.4.0"
serde-inline-default = "0.1.1"
simplelog = "0.12.2"
strum = "0.26.2"
strum_macros = "0.26.2"
serde_variant = "0.1.2"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
	"run-for-all",
	"precommit-hook",
	"run-cargo-check",
	"run-cargo-fmt",
] }
tempdir = "0.3.7"
