[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-search-client = { path = "../torrent-search-client", version = "0.1", features = [
	"graphql",
] }
qbittorrent-api = { path = "../qbittorrent-api", version = "0.1", features = [
	"graphql",
] }
movie-info = { path = "../movie-info", version = "0.1", features = ["graphql"] }
utils = { path = "../utils", version = "0.1" }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.204"
chrono = "0.4.38"
rocket_http = "0.5.1"
serde_json = "1.0.120"
tokio = "1.38.0"
figment = { version = "0.10.19", features = ["yaml"], default-features = false }
filenamify = "0.1.0"
regex = "1.10.5"
lazy_static = "1.5.0"
serde-inline-default = "0.1.1"
simplelog = "0.12.2"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_variant = "0.1.3"
async-graphql = { version = "7.0.6", features = ["chrono"] }
async-graphql-rocket = "7.0.6"
getset = "0.1.2"
log = "0.4.22"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
	"run-for-all",
	"precommit-hook",
	"run-cargo-check",
	"run-cargo-fmt",
] }
tempdir = "0.3.7"
