[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torrent-search-client = { path = "../torrent-search-client", version = "0.1", features = [
	"graphql",
] }
qbittorrent-api = { path = "../qbittorrent-api", version = "0.1", features = [
	"graphql",
] }
movie-info = { path = "../movie-info", version = "0.1", features = ["graphql"] }
utils = { path = "../utils", version = "0.1" }

async-graphql = { workspace = true }
async-graphql-rocket = "7.0.13"
chrono = { workspace = true }
figment = { version = "0.10.19", features = ["yaml"], default-features = false }
filenamify = "0.1.2"
getset = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rocket = { version = "0.5.1", features = ["json"] }
rocket_http = "0.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = "1.1.0"
serde_variant = "0.1.3"
serde-inline-default = "0.2.3"
simplelog = "0.12.2"
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
	"run-for-all",
	"precommit-hook",
	"run-cargo-check",
	"run-cargo-fmt",
] }
tempdir = "0.3.7"
