[package]
name = "movie-info"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.216"
surf = { version = "2.3.2", features = [
	"h1-client",
	"encoding",
], default-features = false }
utils = { path = "../utils", version = "0.1.0" }
async-graphql = { version = "7.0.13", optional = true }
http-cache-surf = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.133"
log = "0.4.22"
getset = "0.1.3"

[features]
graphql = ["dep:async-graphql"]

[dev-dependencies]
lazy_static = "1.5.0"
tokio = "1.42.0"
