[package]
name = "torrent-search-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", version = "0.1" }
async-trait = "0.1.83"
bytesize = "1.3.0"
chrono = "0.4.39"
distance = "0.4.0"
futures = "0.3.31"
async-graphql = { version = "7.0.13", optional = true }
lazy_static = "1.5.0"
regex = "1.11.1"
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
task-local-extensions = "0.1.4"
urlencoding = "2.1.3"
surf = { version = "2.3.2", features = [
	"h1-client",
	"encoding",
], default-features = false }
http-cache-surf = "0.14.0"
log = "0.4.22"
strum_macros = "0.26.4"
strum = "0.26.3"
getset = "0.1.3"
derive-getters = "0.5.0"

[features]
graphql = ["dep:async-graphql"]

[dev-dependencies]
tokio = "1.42.0"
