[package]
name = "torrent-search-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", version = "0.1" }
async-trait = "0.1.88"
bytesize = "2.0.1"
chrono = { workspace = true }
distance = "0.4.0"
futures = "0.3.31"
async-graphql = { workspace = true, optional = true }
lazy_static = { workspace = true }
regex = { workspace = true }
scraper = "0.23.1"
serde = { workspace = true }
serde_json = { workspace = true }
task-local-extensions = "0.1.4"
urlencoding = "2.1.3"
surf = { workspace = true }
http-cache-surf = { workspace = true }
log = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
getset = { workspace = true }

[features]
graphql = ["dep:async-graphql"]

[dev-dependencies]
tokio = { workspace = true }
