[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# async-trait = "0.1.68"
# derive_setters = "0.1.6"
# derive-getters = "0.3.0"
serde = "1.0.194"
# serde_json = "1.0.107"
# surf = "2.3.2"
juniper = { version = "0.15.12" }
derive-getters = "0.3.0"
url = "2.5.0"
derive_setters = "0.1.6"
surf = { version = "2.3.2", features = [
	"curl-client",
	"encoding",
], default-features = false }


# [features]
# graphql = ["dep:juniper"]
